# entrained.ai-engram

./: .dockerignore  .env.example  .gitignore  AGENT_INTEGRATION_GUIDE.md  AGENT_TEAM_MEMORY_CURATION.md  API_SECURITY_CONFIGURATION.md  Briefing.md  CLEANUP_SUMMARY.md  COMMENTS_AS_ENGRAMS_GUIDE.md  DEBUG_MULTI_ENTITY.md  Dockerfile  ENHANCED_MCP_GUIDE.md  MCPIdeas.md  MCP_COMPARISON.md  MCP_INTEGRATION_GUIDE.md  MCP_TEST_RESULTS.md  MultiAgent.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  SOLUTION.md  WHATS_NEW_ENHANCED_MCP.md  comprehensive_production_test.py  deploy_to_production.sh  diagnose_entity_format.py  docker-compose.prod.yml  docker-compose.yml  fix_production_index.sh  fix_vector_index.py  flush_memories.py  generate_ssl.sh  inspect_memories.py  inspect_stored_entities.py  main.py  mcp_server.py  mcp_server_enhanced.py  nginx.conf  pyproject.toml  pytest.ini  quick_test_post_fix.py  recreate_redis_indices.py  (+28 more)
api/: admin_endpoints.py  comment_endpoints.py  curated_memory_endpoints.py  endpoints.py  mcp_endpoints.py  multi_entity_endpoints.py
core/: config.py  redis_client_hash.py  redis_client_multi_entity.py  security.py
docs/: ADMIN_GUIDE.md  AGENT_INTEGRATION_GUIDE.md  AGENT_TEAM_QUICK_START.md  MIGRATION_TO_MULTI_ENTITY.md  MULTI_ENTITY_QUICKSTART.md  SETUP_OPENAI.md
models/: comment_engrams.py  memory.py  memory_curation.py  multi_entity.py  retrieval.py
scripts/: agent_team_debug_query.py  generate_embedding.py
services/: embedding.py  memory_cleanup.py  memory_curator.py
ssl/: cert.pem  key.pem
tests/: advanced_test_suite.py  conftest.py  (+12 more)
(+9 files in other folders)
